[AF-60] test: Cart 조회 기능 테스트 완료 - 장바구니에 한 개 상품 담았을 경우 완료 - 장바구니에 한 개 이상 상품 담았을 경우 - 카트에 아무런 상품이 없는 경우에 대한 처리