@@ -3,6 +3,7 @@ package com.drunkenlion.alcoholfriday.domain.cart.application;
 import com.drunkenlion.alcoholfriday.domain.cart.dao.CartDetailRepository;
 import com.drunkenlion.alcoholfriday.domain.cart.dao.CartRepository;
 import com.drunkenlion.alcoholfriday.domain.cart.dto.CartDetailResponse;
+import com.drunkenlion.alcoholfriday.domain.cart.dto.CartResponse;
 import com.drunkenlion.alcoholfriday.domain.cart.entity.Cart;
 import com.drunkenlion.alcoholfriday.domain.cart.entity.CartDetail;
 import com.drunkenlion.alcoholfriday.domain.member.entity.Member;
@@ -11,7 +12,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -22,17 +22,24 @@ public class CartServiceImpl implements CartService {
 
     // 장바구니 조회
     @Override
-    public List<CartDetailResponse> getCartList(Member member) {
-        // 멤버 카트 찾기
-        Cart cart = cartRepository.findByMember(member)
-                .orElseThrow(() -> new IllegalArgumentException("장바구니에 담은 술이 없습니다."));
+    public CartResponse getCartList(Member member) {
+        Cart cart = addFirstCart(member);
 
-        // 멤버의 장바구니 내역 가져오기
+        if (cart== null) throw new IllegalArgumentException("현재 장바구니에 상품이 없습니다.");
+
         List<CartDetail> cartDetailList = cartDetailRepository.findAllByCart(cart);
 
-        // 클라이언트에게 보내기
-        return cartDetailList.stream()
-                .map(cartDetail -> CartDetailResponse.of(cartDetail, cart))
-                .collect(Collectors.toList());
+        if (cartDetailList.isEmpty()) throw new IllegalArgumentException("현재 장바구니에 상품이 없습니다.");
+
+        List<CartDetailResponse> cartDetails = cartDetailList.stream()
+                                                            .map(CartDetailResponse::of)
+                                                            .toList();
+
+        return CartResponse.of(cartDetails, cart, cartDetailList);
+    }
+
+    @Override
+    public Cart addFirstCart(Member member) {
+        return cartRepository.findFirstByMember(member).orElse(null);
     }
 }
